Base de datos lista(Verificar), y el login esta en proceso

--- a/HairApp.Web/Views/_ViewImports.cshtml
+++ b/HairApp.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using HairApp.Web
 @using HairApp.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Vereyon.Web.FlashMessage
