Crup de tiendas Listo

--- a/HairApp.Web/Views/Shared/_Layout.cshtml
+++ b/HairApp.Web/Views/Shared/_Layout.cshtml
@@ -30,10 +30,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Shop" asp-action="Create_shop">Crear tienda</a></li>
+                    <li><a asp-area="" asp-controller="Shop" asp-action="Index">Tiendas</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     @if (User.Identity.IsAuthenticated)
