--- a/HairApp.Web/Views/Shared/_DeleteDialog.cshtml
+++ b/HairApp.Web/Views/Shared/_DeleteDialog.cshtml
@@ -2,10 +2,10 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete Record</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Eliminar Registro</h5>
             </div>
             <div class="modal-body">
-                <p>Are you sure to want to delete the record?</p>
+                <p>Esta seguro de elimar la tienda?</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal">No</button>
