--- a/HairApp.Web/Views/Shop/Details.cshtml
+++ b/HairApp.Web/Views/Shop/Details.cshtml
@@ -51,11 +51,72 @@
     </dl>
 </div>
 <div>
-    <a asp-action="AddServices" asp-route-id="@Model.Id" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Servicio</a>   
+    <a asp-action="AddService" asp-route-id="@Model.Id" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Imagen</a>
+    <a asp-action="AddService" asp-route-id="@Model.Id" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Servicio</a>
     <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning"> Editar</a>
     <a asp-action="Index" class="btn btn-success"> Atrás</a>
 </div>
-<br />
+<hr />
+    <div id="myCarousel" class="carousel  slide" data-ride="carousel" data-interval="6000">
+        <ol class="carousel-indicators">
+            @if (true)
+            {
+                int cont = 0;
+                foreach (var item in Model.ShopImages)
+                {
+                    <li data-target="#myCarousel" data-slide-to="@cont"></li>
+                    cont = cont + 1;
+                }
+            }
+
+
+        </ol>
+        <div class="carousel-inner" role="listbox">
+
+            @if (true)
+            {
+                int count = 0;
+                @foreach (var item in Model.ShopImages)
+                {
+
+                    if (count == 0)
+                    {
+                        <div class="item active">
+                            <img src="@item.ImageFullPath" alt="ASP.NET" class="img-responsive" />
+                            <div class="carousel-caption" role="option">
+                                <p>
+                                    <a data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"> Eliminar</a>
+                                </p>
+                            </div>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="item">
+                            <img src="@item.ImageFullPath" alt="Visual Studio" class="img-responsive" />
+                            <div class="carousel-caption" role="option">
+                                <p>
+                                    <a data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"> Eliminar</a>
+                                </p>
+                            </div>
+                        </div>
+                    }
+                    count = count + 1;
+                }
+            }
+
+        </div>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+<hr />
+
 
 <div class="row">
     <div class="col-md-12">
@@ -75,7 +136,7 @@
                             </th>
                             <th>
                                 @Html.DisplayNameFor(model => model.Services.FirstOrDefault().IsActive)
-                            </th>                            
+                            </th>
                             <th></th>
                         </tr>
                     </thead>
@@ -91,8 +152,9 @@
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.IsActive)
-                                </td>                                
+                                </td>
                                 <td>
+                                    <a asp-action="EditService" asp-route-id="@item.Id" class="btn btn-warning"><i class="glyphicon glyphicon-pencil"></i></a>
                                     <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
                                 </td>
                             </tr>
@@ -103,6 +165,7 @@
         </div>
     </div>
 </div>
+
 
 
 
@@ -117,7 +180,7 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('#MyTable1').DataTable();
-            $('#MyTable2').DataTable();            
+            $('#MyTable2').DataTable();
 
             sc_deleteDialog.openModal('deleteItem2', true, 'btnYesDelete', '/Products/DeleteImage/', false);
             sc_deleteDialog.openModal('deleteItem', true, 'btnYesDelete', '/Products/DeleteComplement/', false);
