--- a/HairApp.Web/Views/Shop/_Shop.cshtml
+++ b/HairApp.Web/Views/Shop/_Shop.cshtml
@@ -27,6 +27,12 @@
 </div>
 
 <div class="form-group">
+    <label asp-for="ImageFile" class="control-label"></label>
+    <input asp-for="ImageFile" type="file" class="form-control" />
+    <span asp-validation-for="ImageFile" class="text-danger"></span>
+</div>
+
+<div class="form-group">
     <label asp-for="DepartamentId" class="control-label"></label>
     <select asp-for="DepartamentId" asp-items="Model.Departaments" class="form-control"></select>
     <span asp-validation-for="DepartamentId" class="text-danger"></span>
