--- a/HairApp.Web/Views/Shop/Index.cshtml
+++ b/HairApp.Web/Views/Shop/Index.cshtml
@@ -84,6 +84,6 @@
         $(document).ready(function () {
             $('#MyTable').DataTable();
         });
-        sc_deleteDialog.openModal('deleteItem', true, 'btnYesDelete', '/Products/DeleteProduct/', false);
+        sc_deleteDialog.openModal('deleteItem', true, 'btnYesDelete', '/Shop/Delete/', false);
     </script>
 }
