--- a/HairApp.Web/Views/Shop/AddService.cshtml
+++ b/HairApp.Web/Views/Shop/AddService.cshtml
@@ -11,7 +11,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddComplement" enctype="multipart/form-data">
+        <form asp-action="AddService" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ShopId" />
 
