--- a/HairApp.Web/Views/Shop/EditService.cshtml
+++ b/HairApp.Web/Views/Shop/EditService.cshtml
@@ -11,7 +11,7 @@
     <div class="col-md-4">
         <form asp-action="EditService" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ShopId" />
+            <input type="hidden" asp-for="Id" />
 
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -38,7 +38,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Agregar" class="btn btn-primary" />
-                <a asp-action="Details" asp-route-id="@Model.Shop.Id" class="btn btn-success">Atrás</a>
+                <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-success">Atrás</a>
             </div>
         </form>
     </div>
