Reserva Listo, Falta empezar a cambiar los estados de la reserva

--- a/HairApp.Web/Views/Account/ConfirmEmail.cshtml
+++ b/HairApp.Web/Views/Account/ConfirmEmail.cshtml
@@ -5,7 +5,7 @@
 <h2>@ViewData["Title"]</h2>
 <div>
     <p>
-        Thank you for confirming your email. Now you can login into system.
+        Gracias por confirmar su correo electrónico. Ahora puede iniciar sesión en el sistema.
     </p>
 </div>
 
