--- a/HairApp.Web/Views/Shop/AddService.cshtml
+++ b/HairApp.Web/Views/Shop/AddService.cshtml
@@ -17,7 +17,7 @@
 
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <textarea asp-for="Name" class="form-control"></textarea>
+                <input asp-for="Name" class="form-control"></input>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
