--- a/HairApp.Web/Views/Account/Login.cshtml
+++ b/HairApp.Web/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Login";
 }
 
-<h2>Login</h2>
+<h2>Ingresar</h2>
 <flash dismissable="true" />
 <div class="row">
     <div class="col-md-4 offset-md-4">
@@ -32,9 +32,14 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-success" />
-                <a asp-action="Register" class="btn btn-primary">Register New User</a>
-            <a asp-action="RecoverPasswordMVC" class="btn btn-link">¿Olvidaste tu contraseña?</a>
+                <input type="submit" value="Iniciar Sesíon" class="btn btn-success" />              
+            </div>
+            <div class="form-group">                
+                <a asp-action="Register" class="btn btn-primary">Registrar nuevo usuario</a>
+                <a asp-action="Create" class="btn btn-primary">Registrar nuevo tendero</a>                
+            </div>
+            <div class="form-group text-center ">
+                <a asp-action="RecoverPasswordMVC" class="btn btn-link">¿Olvidaste tu contraseña?</a>
             </div>
         </form>
     </div>
