--- a/HairApp.Web/Views/Account/RecoverPasswordMVC.cshtml
+++ b/HairApp.Web/Views/Account/RecoverPasswordMVC.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "Recover Password";
 }
 
-<h2>Recover Password</h2>
+<h2>
+    Recuperar contraseña
+</h2>
 
 <div class="row">
     <div class="col-md-4 offset-md-4">
@@ -18,8 +20,8 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Recover password" class="btn btn-primary" />
-                <a asp-action="Login" class="btn btn-success">Back to login</a>
+                <input type="submit" value="Recuperar contraseña" class="btn btn-primary" />
+                <a asp-action="Login" class="btn btn-success">Atrás</a>
             </div>
         </form>
         <div class="text-success">
