--- a/HairApp.Web/Views/Booking/Index.cshtml
+++ b/HairApp.Web/Views/Booking/Index.cshtml
@@ -7,15 +7,12 @@
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css" />
 <br />
 <flash dismissable="true" />
-<p>
-    <a asp-action="Create" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Tienda</a>
-</p>
 
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Productos</h3>
+                <h3 class="panel-title">Lista de reservas</h3>
             </div>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="MyTable">
@@ -23,6 +20,9 @@
                         <tr>
                             <th>
                                 @Html.DisplayNameFor(model => model.DateLocal)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.EndDateLocal)
                             </th>
                             <th>
                                 @Html.DisplayNameFor(model => model.User.FullName)
@@ -42,28 +42,59 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DateLocal)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.EndDateLocal)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.User.FullName)
+                            </td>
+                            @if (item.Status == 'R')
+                            {
+
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.DateLocal)
+                                    Reservado
                                 </td>
+                            }
+                            else if (item.Status == 'S')
+                            {
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.User.FullName)
+                                    En la Sala
                                 </td>
+                            }
+                            else if (item.Status == 'S')
+                            {
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Status)
+                                    En Proceso
                                 </td>
+                            }
+                            else if (item.Status == 'S')
+                            {
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Service.Name)
+                                    Terminado
                                 </td>
+                            }
+                            else
+                            {
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Service.Shop.Name)
+                                    Cancelado
                                 </td>
-                                <td>
-                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning"><i class="glyphicon glyphicon-pencil"></i></a>
-                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info"><i class="glyphicon glyphicon-align-justify"></i></a>
-                                    <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
-                                </td>
-                            </tr>
+                            }
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Service.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Service.Shop.Name)
+                            </td>
+                            <td>
+                                <a asp-action="#" asp-route-id="@item.Id" class="btn btn-warning"><i class="glyphicon glyphicon-hourglass"></i></a>
+                                <a asp-action="#" asp-route-id="@item.Id" class="btn btn-danger"><i class="glyphicon glyphicon-thumbs-down"></i></a>                                
+                            </td>
+                        </tr>
                         }
                     </tbody>
                 </table>
