--- a/HairApp.Web/Views/Shared/_Layout.cshtml
+++ b/HairApp.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - HairApp.Web</title>
+    <title>@ViewData["Title"] - HairApp</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">HairApp.Web</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">HairApp</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -39,12 +39,12 @@
                     else if (User.Identity.IsAuthenticated && User.IsInRole("Usuario"))
                     {
                         <li><a asp-area="" asp-controller="Booking" asp-action="Index">Reservas</a></li>
-                        <li><a asp-area="" asp-controller="" asp-action="">Tiendas</a></li>
+                        <li><a asp-area="" asp-controller="Shop" asp-action="Index">Tiendas</a></li>
                     }
                     else
                     {
-                        <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="About">Nosotros</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contacto</a></li>
                     }
 
 
@@ -53,11 +53,11 @@
                     @if (User.Identity.IsAuthenticated)
                     {
                         <li><a asp-area="" asp-controller="Account" asp-action="ChangeUser">@User.Identity.Name</a></li>
-                        <li><a asp-area="" asp-controller="Account" asp-action="Logout">Logout</a></li>
+                        <li><a asp-area="" asp-controller="Account" asp-action="Logout">Salir</a></li>
                     }
                     else
                     {
-                        <li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
+                        <li><a asp-area="" asp-controller="Account" asp-action="Login">Iniciar Sesión</a></li>
                     }
                 </ul>
             </div>
@@ -70,7 +70,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2022 - HairApp.Web</p>
+            <p class="text-center">&copy; 2022 - HairApp</p>
         </footer>
     </div>
 
