--- a/HairApp.Web/Views/Shop/Details.cshtml
+++ b/HairApp.Web/Views/Shop/Details.cshtml
@@ -6,18 +6,12 @@
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
 <flash dismissable="true" />
-<h2>Detalles</h2>
+<h2>Detalle</h2>
 
 <div>
-    <h4>Producto</h4>
+    <h4 class="">de la tienda <b>@Html.DisplayFor(model => model.Name) </b></h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Description)
         </dt>
@@ -50,14 +44,20 @@
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="AddService" asp-route-id="@Model.Id" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Imagen</a>
-    <a asp-action="AddService" asp-route-id="@Model.Id" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Servicio</a>
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning"> Editar</a>
-    <a asp-action="Index" class="btn btn-success"> Atrás</a>
-</div>
+@if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
+{
+    <div>
+        <a asp-action="" asp-route-id="@Model.Id" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Imagen</a>
+        <a asp-action="AddService" asp-route-id="@Model.Id" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Servicio</a>
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning"> Editar</a>
+        <a asp-action="Index" class="btn btn-success"> Atrás</a>
+    </div>
+}
+
 <hr />
-    <div id="myCarousel" class="carousel  slide" data-ride="carousel" data-interval="6000">
+@if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
+{
+    <div id="myCarousel" class="carousel  slide center-block" data-ride="carousel" data-interval="6000">
         <ol class="carousel-indicators">
             @if (true)
             {
@@ -71,7 +71,7 @@
 
 
         </ol>
-        <div class="carousel-inner" role="listbox">
+        <div class="carousel-inner center-block" role="listbox">
 
             @if (true)
             {
@@ -115,6 +115,8 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+
+}
 <hr />
 
 
@@ -122,7 +124,7 @@
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Servicios</h3>
+                <h3 class="panel-title">Servicios de la tienda @Html.DisplayFor(model => model.Name)</h3>
             </div>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="MyTable1">
@@ -146,24 +148,32 @@
                     <tbody>
                         @foreach (var item in Model.Services)
                         {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Name)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Description)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.ServiceTime)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.IsActive)
-                            </td>
-                            <td>
-                                <a asp-action="EditService" asp-route-id="@item.Id" class="btn btn-warning"><i class="glyphicon glyphicon-pencil"></i></a>
-                                <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
-                            </td>
-                        </tr>
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Description)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ServiceTime)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.IsActive)
+                                </td>
+                                <td>
+                                    @if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
+                                    {
+                                        <a asp-action="EditService" asp-route-id="@item.Id" class="btn btn-warning"><i class="glyphicon glyphicon-pencil"></i></a>
+                                        <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-trash"></i></button>
+                                    }
+                                    else
+                                    {
+                                        <a asp-action="Booking" asp-route-id="@item.Id" class="btn btn-success"><i class="glyphicon glyphicon-calendar"></i></a>
+                                    }
+
+                                </td>
+                            </tr>
                         }
                     </tbody>
                 </table>
