--- a/HairApp.Web/Views/Shop/EditService.cshtml
+++ b/HairApp.Web/Views/Shop/EditService.cshtml
@@ -38,7 +38,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Agregar" class="btn btn-primary" />
-                <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-success">Atrás</a>
+                <a asp-action="Details" asp-route-id="@Model.Shop.Id" class="btn btn-success">Atrás</a>
             </div>
         </form>
     </div>
