--- a/HairApp.Web/Views/Shop/Booking.cshtml
+++ b/HairApp.Web/Views/Shop/Booking.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
             <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" id="fecha" />
-                <span asp-validation-for="Date" class="text-danger"></span>
+                <label asp-for="DateLocal" class="control-label"></label>
+                <input asp-for="DateLocal" class="form-control" id="fecha" min="@Convert.ToDateTime(DateTime.Now.ToString("yyyy/MM/dd HH:mm"))"/>
+                <span asp-validation-for="DateLocal" class="text-danger"></span>
             </div>
            
 
