--- a/HairApp.Web/Views/Shop/Details.cshtml
+++ b/HairApp.Web/Views/Shop/Details.cshtml
@@ -47,7 +47,7 @@
 @if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
 {
     <div>
-        <a asp-action="" asp-route-id="@Model.Id" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Imagen</a>
+        <a asp-action="AddImage" asp-route-id="@Model.Id" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Imagen</a>
         <a asp-action="AddService" asp-route-id="@Model.Id" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Servicio</a>
         <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning"> Editar</a>
         <a asp-action="Index" class="btn btn-success"> Atrás</a>
@@ -55,7 +55,7 @@
 }
 
 <hr />
-@if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
+@if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin") || User.IsInRole("Usuario"))
 {
     <div id="myCarousel" class="carousel  slide center-block" data-ride="carousel" data-interval="6000">
         <ol class="carousel-indicators">
@@ -92,14 +92,18 @@
                     }
                     else
                     {
-                        <div class="item">
-                            <img src="@item.ImageFullPath" alt="Visual Studio" class="img-responsive" />
-                            <div class="carousel-caption" role="option">
-                                <p>
-                                    <a data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"> Eliminar</a>
-                                </p>
+                        @if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
+                        {
+                            <div class="item">
+                                <img src="@item.ImageFullPath" alt="Visual Studio" class="img-responsive" />
+                                <div class="carousel-caption" role="option">
+                                    <p>
+                                        <button data-id="@item.Id" class="btn btn-danger deleteItem2" data-toggle="modal" data-target="#deleteDialog">Eliminar</button>
+                                    </p>
+                                </div>
                             </div>
-                        </div>
+                        }
+
                     }
                     count = count + 1;
                 }
@@ -198,8 +202,8 @@
             $('#MyTable1').DataTable();
             $('#MyTable2').DataTable();
 
-            sc_deleteDialog.openModal('deleteItem2', true, 'btnYesDelete', '/Products/DeleteImage/', false);
-            sc_deleteDialog.openModal('deleteItem', true, 'btnYesDelete', '/Products/DeleteComplement/', false);
+            sc_deleteDialog.openModal('deleteItem2', true, 'btnYesDelete', '/Shop/DeleteImage/', false);
+            sc_deleteDialog.openModal('deleteItem', true, 'btnYesDelete', '/Shop/DeleteService/', false);
 
         });
     </script>
